// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/test/stories/transferwise.test.ts host.currency = payee.currency != expense.currency = collective.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10099     | -113       | 11483                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.137                    |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -113       | -11370               | -10099                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.137                    |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency != collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 11468     | -97        | 11468                | 11371                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1.1371                   |
| EXPENSE | Expense in EUR | DEBIT  | -11371    | -97        | -11371               | -11468                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1.1371                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency != collective.currency = host.currency 2`] = `
Object {
  "collectiveToHost": 1,
  "expenseToCollective": 1.1371,
  "expenseToHost": 1.1371,
  "expenseToPayoutMethod": 0.855027,
}
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10085     | -97        | 11468                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1371                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -97        | -11371               | -10085                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1371                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency != expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in USD | CREDIT | 10084     | -84        | 10084                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1                        |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -84        | -10000               | -10084                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1                        |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency != collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 11459     | -88        | 11459                | 11371                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1.1371                   |
| EXPENSE | Expense in EUR | DEBIT  | -11371    | -88        | -11371               | -11459                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1.1371                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency != host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in EUR | CREDIT | 10077     | -88        | 11459                | 10000                         | Donnortello | EUR      | Babel EUR              | NULL                   | USD          | 1.1371                   |
| EXPENSE | Expense in EUR | DEBIT  | -10000    | -88        | -11371               | -10077                        | Babel EUR   | EUR      | Donnortello            | Open Source Collective | USD          | 1.1371                   |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel EUR   | EUR      | Open Source Collective | NULL                   | USD          |                          |"
`;

exports[`/test/stories/transferwise.test.ts payee.currency = expense.currency = collective.currency = host.currency 1`] = `
"
| kind    | description    | type   | amount    | paymentFee | amountInHostCurrency | netAmountInCollectiveCurrency | To          | currency | From                   | Host                   | hostCurrency | data.expenseToHostFxRate |
| ------- | -------------- | ------ | --------- | ---------- | -------------------- | ----------------------------- | ----------- | -------- | ---------------------- | ---------------------- | ------------ | ------------------------ |
| EXPENSE | Expense in USD | CREDIT | 10113     | -113       | 10113                | 10000                         | Donnortello | USD      | Babel USD              | NULL                   | USD          | 1                        |
| EXPENSE | Expense in USD | DEBIT  | -10000    | -113       | -10000               | -10113                        | Babel USD   | USD      | Donnortello            | Open Source Collective | USD          | 1                        |
|         |                | CREDIT | 100000000 | 0          | 100000000            | 100000000                     | Babel USD   | USD      | Open Source Collective | NULL                   | USD          |                          |"
`;
